# timberman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: game.cpp  game.hpp  math.cpp  math.hpp  player.hpp  tree.cpp  tree.hpp
src/opengl/: font.cpp  font.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
